# reinterpretive-creativity

./: .gitignore  README.md  README_en.md  pyproject.toml
docs/: 00_terms.md  01_scope.md  02_model.md  03_simulation_design.md  04_limitations.md  05_related_work.md  06_hypothesis.md  07_roadmap.md  08_ci_check.md  09_failure_analysis.md  10_utility_proxy.md  11_search_strategy.md  12_explain_trial.md  13_select_cases.md  14_candidate_limit_sensitivity.md  15_random_teacher_model.md  closure_criteria.md  experiment_matrix.md  formal_assumptions.md  model_core.md  phase1_closure_summary.md  phase1_closure_summary_en.md  phase2_analysis_observations.md  phase2_interim_summary.md  phase2_interpretive_note.md  phase2_mini_start_summary.md
results/: README.md  initial_batch_summary.md  phase2_breakdown_analysis.csv  phase2_breakdown_analysis.json  phase2_breakdown_analysis.md  phase2_candidate_limit_sensitivity.csv  phase2_candidate_limit_sensitivity.json  phase2_candidate_limit_sensitivity.md  phase2_general_random_teacher_suite.csv  phase2_general_random_teacher_suite.json  phase2_general_random_teacher_suite.md  phase2_loss_cases.csv  phase2_loss_cases.json  phase2_loss_cases.md  phase2_noise_patterns.csv  phase2_noise_patterns.json  phase2_noise_patterns.md  phase2_preservation_novelty_tradeoff.md  phase2_random_teacher_smoke.md  phase2_teacher_bias_minicheck.md  phase2_teacher_bias_suite.csv  phase2_teacher_bias_suite.json  phase2_teacher_bias_suite.md  phase2_utility_proxy_comparison.csv  phase2_utility_proxy_comparison.json  phase2_utility_proxy_comparison.md
(+73 files in other folders)
