[project]
name = "reinterpretive-creativity"
version = "0.1.0"
description = "再解釈型創造性モデルの最小シミュレーション"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Unjuno" }
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
